# elastion-cli-weather

./: Cargo.toml  README.md
weather-app/: .env  Cargo.toml
weather-app/src/: additional_functions.rs  bl.rs  cache.rs  config.rs  main.rs
weather-app/src/structs/: cli_args.rs  coordinates.rs  errors.rs  mod.rs  responses.rs  view.rs
weather-app/src/templates/open_weather/: geo.json  history_forecast.json
weather-app/src/templates/weather_api/: forecast.json
