[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = [ "ivan.humeniuk <ivan.humeniuk@spaceseven.com>" ]
description = "Elastio weather app"
resolver = "2"

[dependencies]
regex = "1.10.2"

[dependencies.cli-table ]
version = "0.4.7"
features = ["derive"]

[dependencies.serde_json]
version= "1.0.107"

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "rt-multi-thread"]

[dependencies.redis-derive]
version = "0.1.7"

[dependencies.serde]
version = "1.0.189"
features = ["derive"]

[dependencies.chrono]
version = "0.4.31"

[dependencies.redis]
version = "*"
git = "https://github.com/redis-rs/redis-rs.git"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.reqwest]
version = "0.11.22"
features = ["blocking", "json"] 

[dependencies.clap]
version = "4.4.6"
features = ["derive", "wrap_help"]

